<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        Text

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/textview"
            android:textColor="#673AB7"
            android:textSize="30sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="101dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/tx1" />

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="101dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/tx2" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="101dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/tx3" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="101dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/tx4" />

<!--                <ImageButton-->
<!--                    android:id="@+id/imageButton4"-->
<!--                    android:layout_width="101dp"-->
<!--                    android:layout_height="95dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="#00000000"-->
<!--                    android:contentDescription="@string/todo"-->
<!--                    android:scaleType="fitCenter"-->
<!--                    app:srcCompat="@drawable/touxiang" />-->
            </LinearLayout>
        </HorizontalScrollView>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/t1"
            tools:ignore="LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/t2"
            tools:ignore="LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/t3"
            tools:ignore="LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/t4"
            tools:ignore="LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/t5"
            tools:ignore="LabelFor"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b1" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b2" />

        </LinearLayout>

<!--        <ListView-->
<!--            android:id="@+id/Student_ALL"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="fill_parent" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <com.example.studentmanagersystem.MyListView
            android:id="@+id/Student_ALL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </com.example.studentmanagersystem.MyListView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>